Added Telegram Support

--- a/components/config.json
+++ b/components/config.json
@@ -14,6 +14,9 @@
     "owner":"discord_owner_id",
     "mainChannel":"discord_main_chat_channel_id",
     "bot":"bot_id",
+    "telegramPower":"off",
+    "telegramToken":"Your_Token",
+    "telegramOwnerID":"Your_ID",
     "needWallet":"on",
     "kap_port":"5788",
     "kap_user":"user",
