ver0.4: Slack Support Added

--- a/components/config.json
+++ b/components/config.json
@@ -6,14 +6,14 @@
     "twitAccess_token_key":"Access_token_key",
     "twitAccess_token_secret":"Access_Token_Secret",
     "yourBotName":"@YourBotName",
+    "yourBotID": "######",
     "yourTwitName":"@YourName",
-    "bot_id": "######" ,
-    "personal_id": "######",
+    "yourTwitID": "######",
     "discordPower": "off",
-    "token": "discord_token",
-    "owner":"discord_owner_id",
+    "discordToken": "discord_token",
+    "yourDiscordID":"discord_owner_id",
     "mainChannel":"discord_main_chat_channel_id",
-    "bot":"bot_id",
+    "discordBotID":"bot_id",
     "telegramPower":"off",
     "telegramToken":"Your_Token",
     "telegramOwnerID":"Your_ID",
